examples/test/testpolicy3794.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3794
  namespace: namespace269
spec:
  podSelector:
    matchLabels:
      key25: value23
      key42: value29
      key28: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value46
          key34: value40
          key15: value45
      podSelector:
        matchLabels:
          key5: value26
          key12: value25
